--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "rethinkdb": "^2.1.1",
     "socket.io": "^1.3.7",
     "twitter": "^1.2.5"
+  },
+  "devDependencies": {
+    "chai": "^3.4.0",
+    "mocha": "^2.3.3"
   }
 }
